--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <nav class="nav">
       <div class="nav-center">
         <div class="nav-header">
-          <!-- <a href="/index.html" class="nav-logo">NETMOV</a> -->
-          <a href="/index.html" class="nav-logo"
+          <a href="/index.html" class="nav-logo">NETMOV</a>
+          <!-- <a href="/index.html" class="nav-logo"
             ><img src="./images/net move.jpg" class="nav-image"
-          /></a>
+          /></a> -->
         </div>
         <ul class="nav-links">
           <li><a href="/index.html" class="nav-link">Movies</a></li>
